# MCT443s-course-project

./: LICENSE  README.md
auto_robot/: CMakeLists.txt  package.xml
auto_robot/config/: robot.rviz  robot_controller.yaml
auto_robot/launch/: display.launch.py  gazebo.launch.py
auto_robot/meshes/: base_link.STL  lidar.STL  oak_camera.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL
auto_robot/urdf/: auto_robot.gv  gazebo_classic.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  sensors.xacro
auto_simulation/: CMakeLists.txt  package.xml
auto_simulation/control/: combined_odom.py  lane_switching.py  mission_01.py  visual_lane_switching.py
auto_simulation/launch/: track_01.launch.py  track_02.launch.py
auto_simulation/rviz/: view_robot.rviz
auto_simulation/worlds/: track_01.world  track_02.world
